[package]
name = "makeshift"
description = "A reinforcement-learning powered construction game about learning to make to do."
version = "0.0.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/template-repo"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.7"}

